Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47601

WebEngineNewViewRequest crash on recursive openIn() call.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.6.0 RC
    • 5.5.0
    • WebEngine
    • None
    • I reproduced the issue on both Linux and Windows platforms. Probably all WebEngine platforms are affected.
    • c1ae43bbf402ffd4c39218471508ed8477e66254

    Description

      I need to open popup in the same view, but it cause a crash.

      Steps to reproduce:
      1) Open "Quick Nano browser" example
      2) Insert "request.openIn(webEngineView); return" into BrowserWindow.qml:322 (the insertion should be done in the first line of the onNewViewRequested handler).
      3) Run the example
      4) Open a page with popups. (scroll down on the default page (qt.io) and click on "Like" or "Follow" button on the right)
      5) Click on any link leads to crash in libQt5WebEngineCore module.

      I've managed to get a backtrace. Added as attachment.

      Attachments

        1. shortbt.txt
          4 kB
          Alexandr Akulich
        2. fullbt.txt
          184 kB
          Alexandr Akulich
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jbornema Joerg Bornemann
            kaffeine Alexandr Akulich
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes